--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 
 
-<nav class=" border-gray-200 bg-[#0000001a]   ">
+<nav class=" border-gray-200 bg-[#ccc]  ">
  <div class="container mx-auto ">
    <div class=" flex flex-wrap items-center justify-between  p-6  ">
     <a  class="flex items-center space-x-3 rtl:space-x-reverse order-1 ">
        
-        <span class="self-center text-[32px] font-semibold whitespace-nowrap  text-main">Trendify</span>
+        <span class="self-center text-[32px] font-semibold whitespace-nowrap  text-main">shop</span>
     </a>
 
    <div class="hidden       w-full md:block md:w-auto md:mx-auto  order-3  sm:order-2  " id="navbar-default">
