--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -13,7 +13,7 @@
       />
     </div>
     <div class="form-register px-5">
-      <div class="heading mb-5">
+      <div class="heading mb-5  bg-ma">
         <h1 class="text-[35px] font-bold text-head">Register</h1>
         <p class="text-pargraph">Create an Account to acess all features</p>
       </div>
