--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   class="overflow-hidden login lg:h-[calc(100vh_-_96px)] flex items-center bg-[#FFF8F3] lg:bg-[linear-gradient(to_right,#FFF8F3_50%,_#ffffff_50%)] py-10"
 >
   <div
-    class="container mx-auto md:w-[90%] grid grid-cols-1 lg:grid-cols-2 px-4 rounded-3xl pt-8 bg-white lg:bg-transparent"
+    class="container mx-auto md:w-[90%] grid grid-cols-1 lg:grid-cols-2  rounded-3xl pt-8 bg-white lg:bg-transparent px-3"
   >
     <div class="image flex flex-col justify-cente items-center">
       <h3 class="text-[35px] font-semibold text-head w-[80%] text-center">
