--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="products">
   <h2 class="text-head mx-auto text-center">All Products</h2>
 
-  <div class="container grid grid-cols-1 md:grid-cols-5 mx-auto gap-2">
+  <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-5  px-3 gap-3">
     @for (productItem of productList; track productItem.id) {
 
-    <app-product [product]="productItem"></app-product>
+    <app-product [product]="productItem " ></app-product>
 
     }
 
